<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_landing">


    <fragment
        android:id="@+id/nav_news"
        android:name="com.example.reporter_news_app.ui.news.NewsFragment"
        android:label="news"
        tools:layout="@layout/fragment_news" />

    <fragment
        android:id="@+id/nav_reporter_home"
        android:name="com.example.reporter_news_app.ui.reporter.ReporterHomeFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <fragment
        android:id="@+id/nav_editor_home"
        android:name="com.example.reporter_news_app.ui.editor.EditorHomeFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <fragment
        android:id="@+id/nav_edit_profile"
        android:name="com.example.reporter_news_app.ui.editprofile.EditProfileFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>


    <fragment
        android:id="@+id/nav_login"
        android:name="com.example.reporter_news_app.ui.login.LoginFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <fragment
        android:id="@+id/nav_signup"
        android:name="com.example.reporter_news_app.ui.signup.SignUpFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <fragment
        android:id="@+id/nav_landing"
        android:name="com.example.reporter_news_app.ui.landing.LandingFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.reporter_news_app.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.reporter_news_app.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.reporter_news_app.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />



</navigation>